# irc_chat

./: ARCHITECTURE.md  CMakeLists.txt  GETTING_STARTED.md  IRC_PROTOCOL.md  README.md  build.sh
include/: ChatWidget.h  IrcConnection.h  MainWindow.h
src/: ChatWidget.cpp  IrcConnection.cpp  MainWindow.cpp  main.cpp
